tests/org.eclipse.php.core.tests/workspace/errors/php71/testIterableType01.pdtt
--TEST--
Test iterable pseudo type
--FILE--
<?php
function willAppearOnBAutocompleteNotA(iterable $aaa): iterable
{}
--EXPECT--